Fixed postion: absolte stuff

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -6,6 +6,8 @@
 
 <body id="home">
 	{% include nav.html %}
-	{% include boxes.html %}
+	<div class="page-content-wrapper">
+		{% include boxes.html %}
+	<div>
 </body>
 </html>
