--- a/_sass/2-modules/boxes.sass
+++ b/_sass/2-modules/boxes.sass
@@ -1,9 +1,15 @@
 /* GENERAL STYLING FOR ALL THE BOXES */
+#home
+	.page-content-wrapper
+		margin-top: 50px
+
 .cover
 	width: 100%
 	height: 200px
-	position: absolute
-	margin-top: 50px
+	margin: 0
+	padding: 0
+	// position: absolute
+	// margin-top: 50px
 	font-weight: 700
 	text-transform: uppercase
 	font-size: 30px
@@ -14,6 +20,7 @@
 	// This adds some shades on top of the image
 	// This way the text pops out
 	box-shadow: inset 0 0 0 1000px rgba(0,0,0,0.5)
+	margin: 0
 
 
 
@@ -27,13 +34,11 @@
 
 /* STYLING FOR THE FRAMEWORKS SECTION */
 .frameworks
-	position: absolute
 	background:
 		image: url(../img/frameworks.png)
 		size: cover
 		repeat: norepeat
 	background-color: white
-	margin-top: 470px
 	background-color: black
 	padding-top: 200px
 	color: white
@@ -42,11 +47,9 @@
 .overwhelmed
 	fill: #601314
 	padding-bottom: 150px
-	position: absolute
 	height: 150px
 	background:
 		image: url(../img/overwhelmed.png)
-	margin-top: 870px
 	padding-top: 200px
 	color: white
 	.cta
