Fixed Breaking Buttons

--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -31,16 +31,16 @@
 		<div class="box">
 			<div class="text">
 				<p>If you want to contribute to this website, don't hesitate to contact me:</p>
-				<p class="mail"><a class="btn btn-box" href="mailto:caneparicorrado@outlook.it">caneparicorrado@outlook.it</a></p>
+				<p class="mail"><a class="btn btn-box" href="mailto:caneparicorrado@outlook.it">Contact Me</a></p>
 			</div>
 		</div>
 
 		<div class="box cta">
 			<p>
-				Start reading the articles!
+				Go to the Articles:
 			</p>
 			<p>
-				<a class="btn cta" href="/articles/">Read the articles <i class="fa fa-chevron-circle-right"></i></a>
+				<a class="btn cta" href="/articles/">Articles <i class="fa fa-chevron-circle-right"></i></a>
 			</p>
 		</div>
 	</div>
