Tweaked for mobile

--- a/_sass/3-sections/about.sass
+++ b/_sass/3-sections/about.sass
@@ -6,6 +6,7 @@
 	background-color: $main-btn
 	padding: 10px 20px
 	border: 1px solid darken($main-btn, 5%)
+	margin-top: 10px
 	&:hover
 		background-color: darken($main-btn, 5%)
 		cursor: pointer
