--- a/_sass/3-sections/post.sass
+++ b/_sass/3-sections/post.sass
@@ -1,12 +1,23 @@
 .post
 	text-align: left
-	.box:hover
-		background-color: white
+	.box
+		margin-left: 10px
+		margin-right: 10px
+		padding-left: 10px
+		padding-right: 10px
+		border-radius: 0
+		&:hover
+			background-color: white
 
-p.title
-	text-align: center
+	p.title
+		text-align: center
 
-code
-	background-color: darken(#faf8f0, 2%)
-	padding: 2px
-	border: 1px solid darken(#faf8f0, 5%)
+	p.auth
+		margin-top: 50px
+		font-size: 13px
+		color: tint(black, 40%)
+
+	code
+		background-color: darken(#faf8f0, 2%)
+		padding: 2px
+		border: 1px solid darken(#faf8f0, 5%)
