--- a/_sass/3-sections/posts.sass
+++ b/_sass/3-sections/posts.sass
@@ -2,9 +2,9 @@
 	color: $text-color
 
 	.date
-		width: 100%
 		text-align: left
-		font-size: 13px
-		position: absolute
-		@media(max-width: 575px)
-			display: none
+		size: 50px
+		font-size: 11px
+	
+	hr
+		width: 100px
