--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,7 +11,11 @@
 		<div class="title">
 			<h1>{{ page.title }}</h1>
 			<hr>
-		<div class="box post">{{ page.content }}</div>
+		<div class="box post">
+			<p class="title">{{ page.excerpt }}</p>
+			{{ page.content }}
+			<p class="auth">Written by: {{ page.author }}</p>
+		</div>
 	</div>
 </body>
 
