Added "back" button to article

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,6 +15,7 @@
 			<p class="title">{{ page.excerpt }}</p>
 			{{ page.content }}
 			<p class="auth">Written by: {{ page.author }}</p>
+			<a href="/articles/"><i class="fa fa-chevron-circle-left"></i></a>
 		</div>
 	</div>
 </body>
