--- a/_sass/3-sections/post.sass
+++ b/_sass/3-sections/post.sass
@@ -21,3 +21,13 @@
 		background-color: darken(#faf8f0, 2%)
 		padding: 2px
 		border: 1px solid darken(#faf8f0, 5%)
+
+	a i.fa
+		transition: all linear 0.5s
+		display: inline-block
+		width: 100%
+		text-align: right
+		font-size: 20px
+		color: transparentize($text-color, 0.3)
+		&:hover
+			color: transparentize($text-color, 0.1)
