--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,13 +11,19 @@
 		<div class="title">
 			<h1>{{ page.title }}</h1>
 			<hr>
+		</div>
+		<!-- title -->
 		<div class="box post">
 			<p class="title">{{ page.excerpt }}</p>
 			{{ page.content }}
-			<p class="auth">Written by: {{ page.author }}</p>
-			<a href="/articles/"><i class="fa fa-chevron-circle-left"></i></a>
+			<div class="post-foot">
+				<a href="/articles/"><i class="fa fa-chevron-circle-left"></i></a>
+				<p class="auth">Written by: {{ page.author }}</p>
+			</div>
 		</div>
+		<!-- post -->
 	</div>
+	<!-- page-content-wrapper -->
 </body>
 
 </html>
