Added Jekyll Awesomeness

--- a/_sass/3-sections/post.sass
+++ b/_sass/3-sections/post.sass
@@ -8,6 +8,10 @@
 		border-radius: 0
 		&:hover
 			background-color: white
+		hr
+			margin: 0 50px 0 50px
+		h2
+			margin-top: 40px
 
 	p.title
 		text-align: center
@@ -31,8 +35,22 @@
 		margin-top: 50px
 		display: flex
 
+	hr
+		border: 0
+		height: 1px
+		background: #333
+		background-image: linear-gradient(to right, #ccc,#333, #ccc)
 	code
-		background-color: darken(#faf8f0, 2%)
+		width: 100%
+		background-color: darken($bg-color, 2%)
 		padding: 2px
-		border: 1px solid darken(#faf8f0, 5%)
+		border: 1px solid darken($bg-color, 7%)
 
+	div.multiline
+		margin-left: 10px
+		margin-right: 10px
+		padding-left: 10px
+		padding-right: 10px
+		border-radius: 0
+		background-color: darken($bg-color, 2%)
+		border: 1px solid darken($bg-color, 7%)
