--- a/_sass/3-sections/post.sass
+++ b/_sass/3-sections/post.sass
@@ -9,7 +9,8 @@
 		&:hover
 			background-color: white
 		hr
-			margin: 0 50px 0 50px
+			text-align: left
+			margin-right: 200px
 		h2
 			margin-top: 40px
 
@@ -36,10 +37,7 @@
 		display: flex
 
 	hr
-		border: 0
-		height: 1px
-		background: #333
-		background-image: linear-gradient(to right, #ccc,#333, #ccc)
+		border: 1px solid black
 	code
 		width: 100%
 		background-color: darken($bg-color, 2%)
