--- a/_sass/3-sections/post.sass
+++ b/_sass/3-sections/post.sass
@@ -11,6 +11,10 @@
 		hr
 			text-align: left
 			margin-right: 200px
+			border: none
+			height: 1px
+			background: #333
+			background-image: linear-gradient(to left, white, black)
 		h2
 			margin-top: 40px
 
