--- a/_sass/3-sections/post.sass
+++ b/_sass/3-sections/post.sass
@@ -18,6 +18,12 @@
 		h2
 			margin-top: 40px
 
+		a
+			transition: all 0.5s linear
+			color: darken($highlight, 10%)
+			&:hover
+				color: darken($highlight, 30%)
+
 	p.title
 		text-align: center
 
