--- a/_sass/2-modules/nav.sass
+++ b/_sass/2-modules/nav.sass
@@ -30,7 +30,7 @@
 			display: flex
 	
 			a
-				color: tint($text-color, 20%)
+				color: lighten($text-color, 20%)
 				&:hover
 					color: $text-color
 	
