--- a/_sass/3-sections/about.sass
+++ b/_sass/3-sections/about.sass
@@ -4,11 +4,11 @@
 a.btn
 	transition: all 0.5s ease-in
 	background-color: $main-btn
-	color: tint(black, 30%)
+	color: lighten(black, 30%)
 	padding: 10px 20px
 	border: 1px solid darken($main-btn, 5%)
 	margin-top: 10px
 	&:hover
 		background-color: darken($main-btn, 5%)
-		color: tint(black, 20%)
+		color: lighten(black, 20%)
 		cursor: pointer
