--- a/_sass/3-sections/posts.sass
+++ b/_sass/3-sections/posts.sass
@@ -1,10 +1,10 @@
-.post-thumb
+.box.post-thumb
 	color: $text-color
-
-	.date
+	padding-bottom: 0
+	.info
 		text-align: left
-		size: 50px
-		font-size: 11px
+		font-size: 13px
+		margin-bottom: 10px
 	
 	hr
 		width: 100px
