--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,7 +13,7 @@
 			<hr>
 		</div>
 		<!-- title -->
-		<div class="box post">
+		<div class="box single-post">
 			{{ page.content }}
 			<div class="post-foot">
 				<a href="/articles/"><i class="fa fa-chevron-circle-left"></i></a>
