--- a/_sass/3-sections/post.sass
+++ b/_sass/3-sections/post.sass
@@ -1,6 +1,6 @@
 .post
-	text-align: left
-	.box
+	.box.single-post
+		text-align: left
 		margin-left: 10px
 		margin-right: 10px
 		padding-left: 10px
