--- a/_sass/3-sections/post.sass
+++ b/_sass/3-sections/post.sass
@@ -1,6 +1,9 @@
 .post
+	.page-content-wrapper
+		margin-top: 100px
 	.box.single-post
 		text-align: left
+		margin-top: 40px
 		margin-left: 10px
 		margin-right: 10px
 		padding-left: 10px
@@ -64,3 +67,13 @@
 		border-radius: 0
 		background-color: darken($bg-color, 2%)
 		border: 1px solid darken($bg-color, 7%)
+
+	.other-posts
+		width: 100%
+		text-align: center
+		margin-top: 50px
+		.box.article
+			display: inline-block
+			border-radius: 0
+			margin: 20px
+			width: calc(45% - 20px)
