--- a/_sass/3-sections/posts.sass
+++ b/_sass/3-sections/posts.sass
@@ -1,10 +1,14 @@
-.box.post-thumb
-	color: $text-color
-	padding-bottom: 0
-	.info
-		text-align: left
-		font-size: 13px
-		margin-bottom: 10px
-	
+.posts
+	.box
+		color: $text-color
+		padding-bottom: 0
+		margin-bottom: 50px
+		.info
+			text-align: left
+			font-size: 13px
+			margin-bottom: 10px
 	hr
 		width: 100px
+
+	.categories
+		margin-left: 60px
