--- a/_sass/1-base/glob.sass
+++ b/_sass/1-base/glob.sass
@@ -6,9 +6,22 @@ body, html
 	padding: 0
 	margin: 0
 	overflow-x: hidden
-	
+
+	.cat
+		font-weight: bold
+		text-transform: uppercase
+
 	.page-content-wrapper
 		margin-top: 80px
+
+	.box.category
+		display: inline-block
+		color: $text-color
+		width: 60px
+		border-radius: 0px
+		padding: 10px
+		margin: 5px 10px 10px 20px
+		background-color: darken(white, 1%)
 
 
 	.title
