--- a/_sass/3-sections/post.sass
+++ b/_sass/3-sections/post.sass
@@ -1,9 +1,13 @@
 .post
 	.page-content-wrapper
 		margin-top: 100px
+
+	.categories
+		margin-left: 20px
+
 	.box.single-post
 		text-align: left
-		margin-top: 40px
+		margin-top: 20px
 		margin-left: 10px
 		margin-right: 10px
 		padding-left: 10px
@@ -72,6 +76,8 @@
 		width: 100%
 		text-align: center
 		margin-top: 50px
+		a
+			color: $text-color
 		.box.article
 			display: inline-block
 			border-radius: 0
