--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+	<meta name="google-site-verification" content="7mNbZbK6K-bN1HxPZpXkvJF7EbyiDPnCKtzoAhyz1bA" />
 	{% include head.html %}
 </head>
 
@@ -8,6 +10,7 @@
 	{% include nav.html %}
 	<div class="page-content-wrapper">
 		{% include boxes.html %}
-	<div>
+		<div>
 </body>
+
 </html>
