--- a/_sass/3-sections/posts.sass
+++ b/_sass/3-sections/posts.sass
@@ -2,13 +2,12 @@
 	.box
 		color: $text-color
 		padding-bottom: 0
-		margin-bottom: 50px
+		margin-bottom: 15px
 		.info
 			text-align: left
 			font-size: 13px
-			margin-bottom: 10px
-	hr
-		width: 100px
-
-	.categories
-		margin-left: 60px
+	.title
+		h1
+			font-size: 30px
+		hr
+			width: 400px
