--- a/_layouts/articles.html
+++ b/_layouts/articles.html
@@ -6,37 +6,21 @@
 </head>
 
 <body id="articles" class="posts">
-	{% include nav.html %}
-	<div class="page-content-wrapper">
-		<div class="categories">
-			<span class="cat">Category:</span>
-			{% for category_stuff in site.categories reversed %}
-			{% assign category = category_stuff | first %}
-			<a href="/articles#{{category}}">
-				<div class="box category">
-					{{category}}
-				</div>
-			</a>
-			{%endfor%}
-		</div>
-
-		{% assign posts = site.posts | group_by:"categories" %} {% for category_stuff in site.categories reversed %} {% assign category
-		= category_stuff | first %}
-		<div class="title">
-			<h1 name="{{category}}">{{category}}</h1>
-			<hr>
-		</div>
-		{% for stuff in posts %} {% for post in stuff.items %} {% if post.categories contains category %}
-		<a href="{{post.url}}">
-			<div class="box">
-				<h1> {{post.title}}</h1>
-				<p>{{post.excerpt}}</p>
-				<div class="info">
-					{{post.author}} | {{post.date | date_to_string}}
-				</div>
+	<div class="title">
+		<h1>Articles</h1>
+		<hr>
+	</div>
+	{%for post in site.posts%}
+	<a href="{{post.url}}">
+		<div class="box">
+			<h1> {{post.title}}</h1>
+			<p>{{post.excerpt}}</p>
+			<div class="info">
+				{{post.author}} | {{post.date | date_to_string}}
 			</div>
-		</a>
-		{% endif %} {% endfor %} {% endfor %} {% endfor %}
+		</div>
+	</a>
+	{% endfor %}
 	</div>
 </body>
 
