--- a/_sass/3-sections/post.sass
+++ b/_sass/3-sections/post.sass
@@ -1,6 +1,12 @@
 .post
 	.page-content-wrapper
 		margin-top: 100px
+		#heading
+			.title 
+				h1
+					font-size: 55px
+				hr
+					width: 400px
 
 	.categories
 		margin-left: 20px
@@ -76,6 +82,11 @@
 		width: 100%
 		text-align: center
 		margin-top: 50px
+		.heading
+			.title
+				font-size: 30px
+				
+			
 		a
 			color: $text-color
 		.box.article
